--- a/favicon.html
+++ b/favicon.html
@@ -23,13 +23,13 @@
   <script src="script.js"></script>
 
   <!-- Create MDL container -->
-  <div class = "mdl-layout mdl-js-layout mdl-layout--fixed-header">
+  <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
 
     <!-- Web page header -->
-    <header class = "mdl-layout__header">
-      <div class = "mdl-layout__header-row">      
-        <span class = "mdl-layout-title">Carrot Facts</span>
-      </div>       
+    <header class="mdl-layout__header">
+      <div class="mdl-layout__header-row">
+        <span class="mdl-layout-title">Carrot Facts</span>
+      </div>
     </header>
 
 
@@ -37,35 +37,35 @@
     <h1>Carrot Facts:</h1>
     <!-- Icon List -->
     <style>
-    .demo-list-icon {
-      width: 70%;
-    }
+      .demo-list-icon {
+        width: 70%;
+      }
     </style>
 
     <ul class="demo-list-icon mdl-list">
       <li class="mdl-list__item">
         <span class="mdl-list__item-primary-content">
-        <i class="material-icons mdl-list__item-icon">spa</i>
-        Carrots are good for eyes!
-    </span>
+          <i class="material-icons mdl-list__item-icon">spa</i>
+          Carrots are good for eyes!
+        </span>
       </li>
       <li class="mdl-list__item">
         <span class="mdl-list__item-primary-content">
-        <i class="material-icons mdl-list__item-icon">settings</i>
-        Carrots pioneered the Industrial Revolution!
-      </span>
+          <i class="material-icons mdl-list__item-icon">settings</i>
+          Carrots pioneered the Industrial Revolution!
+        </span>
       </li>
       <li class="mdl-list__item">
         <span class="mdl-list__item-primary-content">
-        <i class="material-icons mdl-list__item-icon">camera</i>
-        Carrots are superior to the nasty bellpeppers!
-      </span>
+          <i class="material-icons mdl-list__item-icon">camera</i>
+          Carrots are superior to the nasty bellpeppers!
+        </span>
       </li>
       <li class="mdl-list__item">
         <span class="mdl-list__item-primary-content">
-        <i class="material-icons mdl-list__item-icon">alarm</i>
-        The enriched history of Carrots was forgotten due to time!
-      </span>
+          <i class="material-icons mdl-list__item-icon">alarm</i>
+          The enriched history of Carrots was forgotten due to time!
+        </span>
       </li>
     </ul>
     <div id="random-element">
@@ -75,24 +75,24 @@
     <h5>Slider Component - Invented by <strike>Robert Bellpepper</strike> John Carrot </h5>
     <br>
     <!-- Slider with Starting Value -->
-    <input class="mdl-slider mdl-js-slider" type="range"
-      min="0" max="100" value="25" tabindex="0">
+    <input class="mdl-slider mdl-js-slider" type="range" min="0" max="100" value="25" tabindex="0">
 
     <br>
 
 
     <!-- Square card -->
     <style>
-    .demo-card-square.mdl-card {
-      width: 320px;
-      height: 320px;
-      padding-left: 20px;
-    }
-    .demo-card-square > .mdl-card__title {
-      color: #fff;
-      background:
-        url('./fav_index/favicon-32x32.png') #46B6AC;
-    }
+      .demo-card-square.mdl-card {
+        width: 320px;
+        height: 320px;
+        padding-left: 20px;
+      }
+
+      .demo-card-square>.mdl-card__title {
+        color: #fff;
+        background:
+          url('./fav_index/favicon-32x32.png') #46B6AC;
+      }
     </style>
 
     <div class="demo-card-square mdl-card mdl-shadow--2dp">
@@ -108,7 +108,7 @@
         </a>
       </div>
     </div>
-    
+
   </div>
 </body>
 
