Converted padding to margin

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       .demo-card-square.mdl-card {
         width: 320px;
         height: 320px;
-        padding-left: 20px;
+        margin: 20px;
       }
 
       .demo-card-square>.mdl-card__title {
