--- a/favicon.html
+++ b/favicon.html
@@ -85,7 +85,7 @@
       .demo-card-square.mdl-card {
         width: 320px;
         height: 320px;
-        padding-left: 20px;
+        margin: 20px;
       }
 
       .demo-card-square>.mdl-card__title {
