switched up message to make it more readable

--- a/favicon.html
+++ b/favicon.html
@@ -69,7 +69,7 @@
       </li>
     </ul>
     <div id="random-element">
-      This text is contained inside a &ltdiv&gt tag, popularized by the carrot populace.
+      This text is contained inside a &ltdiv&gt tag, an act popularized by the carrot populace.
     </div>
     <br>
     <h5>Slider Component - Invented by <strike>Robert Bellpepper</strike> John Carrot </h5>
